...

                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="116" id="4OO-z1-SW1"/>
                                </constraints>
                                <segments>
                                    <segment title="Sign In"/>
                                    <segment title="Sign Up"/>
                                </segments>
                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <connections>
                                    <action selector="signUpOrSignIn1:" destination="BPo-KL-nTY" eventType="valueChanged" id="bIl-pU-Ns0"/>
                                </connections>
...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9j5-Ly-RvK">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L5N-in-K6r">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="signInEmailTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="ZcV-ul-j2Q"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
...
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="c8m-yO-Am3">
                                        <rect key="frame" x="0.0" y="84" width="300" height="44"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJZ-MI-oFh">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="signInFullNameTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="5uo-9n-QjY"/>
                                                    <constraint firstAttribute="width" constant="300" id="Dun-AW-9bM"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="GCV-df-JDM">
                                                <rect key="frame" x="0.0" y="0.0" width="273" height="40"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aWJ-PN-v0m">
                                                        <rect key="frame" x="0.0" y="0.0" width="250" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="250" id="am1-SH-PhD"/>
                                                            <constraint firstAttribute="height" constant="40" id="ehC-Op-25l"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYf-f2-Cac">
                                <rect key="frame" x="20" y="598.5" width="374" height="45"/>

                                <color key="backgroundColor" red="0.96078431372549022" green="0.792156862745098" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SignInButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="aWs-MK-6tS"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
...
