...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZVa-4i-Adm">
                                <rect key="frame" x="20" y="303.5" width="374" height="90"/>
                                <color key="backgroundColor" red="0.8784313725490196" green="0.91764705882352937" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="BookATripMainButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="90" id="7yg-CY-loE"/>
                                    <constraint firstAttribute="width" constant="374" id="Xmh-QP-i7R"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="48"/>
                                <state key="normal" title="+">
...
